Reset Product form after adding product

--- a/code/celo101-code-chapter_3/3-2-the-html-of-your-project/index.html
+++ b/code/celo101-code-chapter_3/3-2-the-html-of-your-project/index.html
@@ -95,7 +95,7 @@
             ></button>
           </div>
           <div class="modal-body">
-            <form>
+            <form id="product-form">
               <div class="form-row">
                 <div class="col">
                   <input
